--- a/Day 09/homework/index3.html
+++ b/Day 09/homework/index3.html
@@ -2,7 +2,7 @@
 <h2>mr.robot</h2>
 <hr>
 <p>Mr. Robot is an American drama thriller television series created by Sam Esmail for USA Network. It stars Rami Malek as Elliot Alderson, a cybersecurity engineer and hacker with social anxiety disorder, clinical depression, and dissociative identity disorder. Elliot is recruited by an insurrectionary anarchist known as "Mr. Robot", played by Christian Slater, to join a group of hacktivists called "fsociety". The group aims to destroy all debt records by encrypting the financial data of E Corp, the largest conglomerate in the world.</p>
-
+<a href="./index2.html">go back</a>
 
 
 </center>
